--- a/src/administration/admins/templates/admins/base.html
+++ b/src/administration/admins/templates/admins/base.html
@@ -30,7 +30,7 @@
 
 </head>
 {% block base_no_body %}
-    <body>
+    <body style="background-image:linear-gradient(rgba(255, 255, 255, 0.87), rgba(255, 255, 255, 0.87)), url('/static/website/images/backgrounds/background (2).png');">
     <script src="{% static 'admin/js/demo-theme.min.js' %}?1668287865"></script>
 
     <div class="page">
