App:Implemented admin dashboard functionality

--- a/src/administration/admins/templates/admins/productweight_form.html
+++ b/src/administration/admins/templates/admins/productweight_form.html
@@ -6,7 +6,7 @@
 {% block base_subhead_heading %}Product Weight &rAarr; Form {% endblock %}
 {% block base_subhead_paragraph %}{% endblock %}
 {% block base_subhead_button %}
-    <a href="{% url 'admins:product-weight-list' %}">&larr; Product Weight</a>
+    <a href="{% url 'admins:product-weight-list' %}">&larr;&nbsp;Product Weight</a>
 {% endblock %}
 
 {% block base_content %}
